# cereal

./: .gitignore  Cargo.toml  create_tables.sql
src/: error.rs  main.rs
src/controllers/: books.rs  chapters.rs  mod.rs  subscribers.rs  subscriptions.rs
src/logging/: mod.rs
src/models/: books.rs  chapters.rs  mod.rs  subscribers.rs  subscriptions.rs
src/providers/: apparatus_of_change_patreon.rs  daily_grind_patreon.rs  mod.rs  pale.rs  royalroad.rs  wandering_inn_patreon.rs
src/tasks/: mod.rs
src/tasks/chapter_body_conversion/: calibre.rs  mod.rs
src/tasks/chapter_body_hydration/: mod.rs
src/tasks/chapter_discovery/: mod.rs
src/tasks/delivery/: mailgun.rs  mod.rs  pushover.rs
src/util/: mod.rs
