[package]
name = "cereal-rewrite"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cereal"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["query"] }
axum-macros = "0.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
hyper = "0.14.23"
serde = { version = "1.0.151", features = ["serde_derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "v7", "serde"] }
