[package]
name = "cereal-rewrite"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cereal"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
async-trait = "0.1.60"
axum = { version = "0.6.1", features = ["query"] }
axum-macros = "0.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
futures = "0.3.25"
hyper = { version = "0.14.23", default_features=false }
itertools = "0.10.5"
mailparse = "0.14.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "cookies", "json", "multipart"] }
rss = {version = "2.0.1", default-features = false }
rusoto_core = { version = "0.48.0", default-features=false, features = ["rustls"] }
rusoto_s3 = { version = "0.48.0", default-features=false, features = ["rustls"] }
sanitize-filename = "0.4.0"
scraper = "0.14.0"
selectors = "0.22.0"
serde = { version = "1.0.151", features = ["serde_derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
tonic = { version = "0.8.3", features =["tls-webpki-roots", "tls"] }
tower-http = { version = "0.3.5", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.2.2", features = ["v4", "v7", "serde"] }
